@@ -22,6 +22,8 @@ WIP      Implement "Recently played SL ROMs"
 
 [B]Advanced Emulator Launcher | version 0.9.5 | xx May 2018[/B]
 
+FEATURE  CRC32 hash collision detector for MAME and SL ROMs.
+
 FEATURE  MAME ROM and asset cache disable by default. They may be enabled by user that want to
          increase the loading speed. This will be very useful for develpment because
          cache rebuilding takes a long time.
